Fixed Editor Cert spacing

--- a/app/static/recipe.css
+++ b/app/static/recipe.css
@@ -303,7 +303,7 @@ dt {
 
 .mealtime-badge {
 	margin-top: 10px;
-	margin-bottom: 15px;
+	margin-bottom: 8px;
 }
 
 
